--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
             <a href="index.html">Mundo</a>
             <a href="#">Minha escola</a>
         </nav>
-    </header>
-    <main></main>
-    <footer></footer>
+   '''''''''''' </header>
+    <main class="graficos-section">
+        <section id=graficos-container" class="graficos-container">
+            <!--crie os graficos aqui-->
+        </section>    
+    </main>
+    <footer>
+        <p>Desenvolvido Por Manu Prado -3D </p>
+    </footer>
 </body>
 </html>
